--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -11,10 +15,14 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/styled-components": "^5.1.11",
+    "caniuse-lite": "^1.0.30001251",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-responsive": "^9.0.0-beta.3",
@@ -45,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.8.1",
     "autoprefixer": "^9",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
